--- a/index.html
+++ b/index.html
@@ -6,130 +6,215 @@
   <title>H4 INDUSTRY - Honest Honey</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
-    body {
+    * {
+      box-sizing: border-box;
       margin: 0;
+      padding: 0;
+    }
+    body {
       font-family: 'Open Sans', sans-serif;
-      background: #fdfaf6;
+      background: #fff;
       color: #333;
+      display: flex;
+    }
+    .sidebar {
+      background: #fff3db;
+      width: 220px;
+      padding: 2rem 1rem;
+      border-right: 2px solid #f0e6c0;
+      height: 100vh;
+      position: fixed;
+      top: 0;
+      left: 0;
+    }
+    .sidebar h2 {
+      font-family: 'Playfair Display', serif;
+      color: #8c5700;
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+    .sidebar a {
+      display: block;
+      color: #8c5700;
+      text-decoration: none;
+      margin: 1rem 0;
+      font-weight: bold;
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+    }
+    .sidebar a:hover {
+      background: #ffe8a3;
+    }
+    .main-content {
+      margin-left: 220px;
+      width: calc(100% - 220px);
     }
     header {
-      background-color: #fff8e1;
-      padding: 2rem;
+      background: linear-gradient(90deg, #ffe8a3, #ffd384);
+      padding: 2rem 1rem;
       text-align: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
     header h1 {
       font-family: 'Playfair Display', serif;
-      font-size: 2.5rem;
-      margin: 0;
+      font-size: 3.5rem;
+      color: #8c5700;
     }
     header p {
-      margin: 0.5rem 0 0;
-      font-style: italic;
-      color: #777;
+      color: #6c4f00;
+      font-size: 1.2rem;
+      margin-top: 0.5rem;
+    }
+    .hero {
+      background: url('https://i.postimg.cc/4NWzdB7z/hero-bg.jpg') no-repeat center center/cover;
+      color: white;
+      text-align: center;
+      padding: 6rem 2rem;
+    }
+    .hero h2 {
+      font-size: 3rem;
+      font-family: 'Playfair Display', serif;
+    }
+    .hero p {
+      font-size: 1.3rem;
+      margin-top: 1rem;
     }
     .section {
-      padding: 3rem 1rem;
-      max-width: 1000px;
+      padding: 4rem 2rem;
+      max-width: 1200px;
       margin: auto;
     }
     .products {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 2rem;
     }
     .product {
-      background: white;
+      background: #fff9ec;
       border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.08);
       padding: 1.5rem;
-      max-width: 300px;
       text-align: center;
     }
     .product img {
       width: 100%;
+      height: 200px;
+      object-fit: cover;
       border-radius: 8px;
-      margin-bottom: 1rem;
     }
     .product h3 {
-      margin-top: 0;
+      margin-top: 1rem;
       font-family: 'Playfair Display', serif;
+      color: #a06800;
+    }
+    .product p {
+      font-size: 0.95rem;
+      margin: 0.5rem 0 1rem;
     }
     .buy-button {
-      background-color: #c29d59;
+      background: #8c5700;
       color: white;
-      padding: 0.75rem 1.5rem;
       border: none;
-      border-radius: 6px;
-      font-weight: bold;
+      padding: 0.7rem 1.5rem;
+      border-radius: 5px;
       cursor: pointer;
-      margin-top: 1rem;
     }
-    .about {
-      background-color: #fff3e0;
+    .buy-button:hover {
+      background: #6e4400;
+    }
+    .about, .contact {
+      background: #fffaf0;
       border-radius: 10px;
       padding: 2rem;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.03);
-    }
-    .contact {
-      text-align: center;
       margin-top: 2rem;
+      text-align: center;
     }
     footer {
-      background: #c29d59;
+      background: #8c5700;
       color: white;
       text-align: center;
       padding: 1rem;
     }
   </style>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </head>
 <body>
-  <header>
-    <h1>H4 INDUSTRY</h1>
-    <p>"HONESTY HAI HUMANITY HAI"</p>
-  </header>
-
-  <section class="section">
-    <h2 style="text-align:center; font-family: 'Playfair Display', serif;">Our Honeys</h2>
-    <div class="products">
-      <div class="product">
-        <img src="https://i.postimg.cc/VvVvQyt0/Chat-GPT-Image-Apr-23-2025-05-36-28-PM.png" alt="Sarso Honey">
-        <h3>SARSO</h3>
-        <p>Pure mustard blossom honey – bold and natural.</p>
-        <button class="buy-button">Buy Now</button>
-      </div>
-      <div class="product">
-        <img src="https://i.postimg.cc/nchYY97L/Chat-GPT-Image-Apr-23-2025-05-39-23-PM.png" alt="Sfeda Honey">
-        <h3>SFEDA</h3>
-        <p>Eucalyptus nectar honey – soothing and rich.</p>
-        <button class="buy-button">Buy Now</button>
-      </div>
-      <div class="product">
-        <img src="https://i.postimg.cc/xCcdtdrH/Chat-GPT-Image-Apr-23-2025-05-40-57-PM.png" alt="Kikar Honey">
-        <h3>KIKAR</h3>
-        <p>Acacia (Kikar) honey – light, sweet, and premium.</p>
-        <button class="buy-button">Buy Now</button>
-      </div>
+  <div class="sidebar">
+    <h2>H4 MENU</h2>
+    <a href="#products">Our Honeys</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+  </div>
+  <div class="main-content">
+    <header>
+      <h1>H4 INDUSTRY</h1>
+      <p>"HONESTY HAI HUMANITY HAI"</p>
+    </header>
+    <div class="hero">
+      <h2>Nature’s Luxury in Every Drop</h2>
+      <p>Premium, pure, and powerful – that’s H4 Honey.</p>
     </div>
-  </section>
-
-  <section class="section about">
-    <h2 style="font-family: 'Playfair Display', serif;">About Us</h2>
-    <p>
-      At H4 INDUSTRY, our mission is simple — deliver pure, natural honey with the values of honesty and humanity.
-      We work with local beekeepers to bring luxury straight from nature’s lap to your home.
-    </p>
-  </section>
-
-  <section class="section contact">
-    <h2>Contact Us</h2>
-    <p>📞 WhatsApp: +91-XXXXXXXXXX</p>
-    <p>✉️ Email: contact@h4industry.com</p>
-  </section>
-
-  <footer>
-    &copy; 2025 H4 INDUSTRY — All Rights Reserved
-  </footer>
+    <section class="section" id="products">
+      <h2 style="text-align:center; font-family: 'Playfair Display', serif; margin-bottom: 2rem;">Our Honeys</h2>
+      <div class="products">
+        <div class="product">
+          <img src="https://i.postimg.cc/d3GmSmT6/sarso.png" alt="Sarso Honey">
+          <h3>SARSO</h3>
+          <p>Pure mustard blossom honey – bold and natural.</p>
+          <button class="buy-button" onclick="payNow('Sarso Honey', 29900)">Buy Now</button>
+        </div>
+        <div class="product">
+          <img src="https://i.postimg.cc/dVQK9McD/sfeda.png" alt="Sfeda Honey">
+          <h3>SFEDA</h3>
+          <p>Eucalyptus nectar honey – soothing and rich.</p>
+          <button class="buy-button" onclick="payNow('Sfeda Honey', 34900)">Buy Now</button>
+        </div>
+        <div class="product">
+          <img src="https://i.postimg.cc/Yq2q8pC7/kikar.png" alt="Kikar Honey">
+          <h3>KIKAR</h3>
+          <p>Acacia (Kikar) honey – light, sweet, and premium.</p>
+          <button class="buy-button" onclick="payNow('Kikar Honey', 39900)">Buy Now</button>
+        </div>
+      </div>
+    </section>
+    <section class="section about" id="about">
+      <h2 style="font-family: 'Playfair Display', serif;">About Us</h2>
+      <p style="max-width: 800px; margin:auto;">
+        H4 INDUSTRY stands for purity and purpose. We partner with nature and local beekeepers to craft honey that’s ethical, unfiltered, and luxurious.
+      </p>
+    </section>
+    <section class="section contact" id="contact">
+      <h2>Contact Us</h2>
+      <p>📞 WhatsApp: +91-XXXXXXXXXX</p>
+      <p>✉️ Email: contact@h4industry.com</p>
+    </section>
+    <footer>
+      &copy; 2025 H4 INDUSTRY — All Rights Reserved
+    </footer>
+  </div>
+  <script>
+    function payNow(productName, amountInPaise) {
+      var options = {
+        "key": "YOUR_RAZORPAY_KEY_HERE",
+        "amount": amountInPaise,
+        "currency": "INR",
+        "name": "H4 INDUSTRY",
+        "description": productName,
+        "image": "https://i.postimg.cc/d3GmSmT6/sarso.png",
+        "handler": function (response){
+          alert('Payment successful! Razorpay ID: ' + response.razorpay_payment_id);
+        },
+        "prefill": {
+          "name": "",
+          "email": "",
+          "contact": ""
+        },
+        "theme": {
+          "color": "#b8860b"
+        }
+      };
+      var rzp = new Razorpay(options);
+      rzp.open();
+    }
+  </script>
 </body>
 </html>
