--- a/index.html
+++ b/index.html
@@ -700,9 +700,7 @@
           <a href="#about" class="footer-link">About</a>
           <a href="#contact" class="footer-link">Contact</a>
           <a href="#" class="footer-link">Shipping Policy</a>
-          <footer>
-          <p><a href="privacy.html">Privacy Policy</a></p>
-          </footer>
+          <a href="privacy.html" class="footer-link">Privacy Policy</a></p>
         </div>
         <div class="copyright">
           &copy; 2025 H4 INDUSTRY — All Rights Reserved
