--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
       <a href="#products"><i class="fas fa-honey-pot"></i> Our Honeys</a>
       <a href="#about"><i class="fas fa-leaf"></i> About Us</a>
       <a href="#contact"><i class="fas fa-envelope"></i> Contact</a>
-      <a href="#"><i class="fas fa-question-circle"></i> FAQ</a>
+      <a href="faq.html"><i class="fas fa-question-circle"></i> FAQ</a>
       <a href="#"><i class="fas fa-truck"></i> Shipping</a>
     </nav>
     
